<resources>
    <string name="app_name">Word!</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="dark_theme_text">Dark Theme</string>
    <string name="hard_mode_text">Hard Mode</string>
    <string name="hard_mode_desc">Player must use revealed hints in subsequent guesses</string>
    <string name="high_contrast">High Constrast Mode</string>
    <string name="high_contrast_text">For improved color vision</string>
    <string name="feedback_suggestions">Feedback and Suggestions</string>
    <string name="email">E-mail</string>
    <string name="community">Community</string>
    <string name="facebook">Facebook</string>
    <string name="questions">Questions?</string>
    <string name="faq">FAQ</string>
</resources>